# pocket-cocktail-party

./: .gitattributes  .gitignore  LICENSE  MANIFEST.md  README.md  pyproject.toml  requirements.txt
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docs/dev_notes/: raw_pentagon.txt  roadmap.md
docs/experimental_notes/: collected_stuff_for_pocket_cocktail_party.md  fathers_day_matching_game.md  synthetic_experiment_0p0_yc_ica.md
docs/math/: pentagon_trig.md  pentagon_trig_old.md
docs/project_admin/: repo_setup_description_300_words.md  yellowcard_permission_request.md
docs/temporarily_useful_stuff/: make_pentagon_figures_layout_tweaks.py
figures/: README.md
scripts/: make_pentagon_figures.py  run_synthetic_0p0.py
src/pocket_cocktail_party/: __init__.py  alignment.py  geometry.py  ica.py  metrics.py  mixing.py  sources.py
tests/: test_geometry.py
